# Glia

./: .gitignore  .travis.yml  DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
ci/: appveyor-bootstrap.py
docs/api/: glia.rst
glia/: __main__.py  app.py  utils.py
glia/widgets/: jupyter.py
glia/widgets/editor/: __init__.py  lexer.py
glia/windows/: main.py
resources/themes/dracula/: dracula.qss  jupyter.css  pygments.py
tests/: test_cli.py
