metadata]
name = Glia
version = attr: glia.__version__
description = Official Desktop Client for Glial Engines
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = daegontaven
author_email = daegontaven@gmail.com
url = https://github.com/gliahq/Glia
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Environment :: X11 Applications :: Qt
    Topic :: Documentation :: Sphinx

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    PyQt5
    qscintilla


[options.extras_require]
DOCS =
    Sphinx
    sphinx_rtd_theme
TESTS =
    pytest
    pytest-qt
    pytest-cov
    pytest-runner

[options.entry_points]
console_scripts =
    glia=glia.__main__:main

[options.packages.find]
include =
    glia
    glia.*
